k8s-baseline/account-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: account-service
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    istio-injection: enabled
